# hauto.api-gateway

./: Dockerfile  Makefile  README.md  docs.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
clients/rabbitmq/: __init__.py  publications.py
clients/transaction_service/: __init__.py  endpoints.py  notes.txt  requests.py  types.py
clients/websocket/: __init__.py  messages.py
config/: __init__.py
errors/: __init__.py  handlers.py  models.py
messaging/: types.py
models/: devices.py  state.py
rabbitmq/: publisher.py  router.py  types.py
routers/: actions.py  devices.py  streams.py  websocket.py
routers/actions/: routes.py  types.py
routers/devices/: routes.py
routers/notifications/: routes.py  types.py
services/: action.py
services/actions/: service.py  types.py
services/devices/: service.py  types.py
services/notifications/: __init__.py  service.py
