[tool.poetry]
name = "hauto-api-gateway"
version = "0.1.0"
description = ""
authors = ["Pedro Moura <pmoura.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "hauto"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
requests = "^2.31.0"
faststream = {extras = ["rabbit"], version = "^0.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
